# grug-for-c

./: CMakeLists.txt  README.md
.github/workflows/: grug.yml
src/: grug.c  grug.h  grug_arena.c  grug_arena.h  grug_main.c  grug_main.h  grug_options.h
test/: example.c  test.c  tests.h
